tests/snapshots/scripts_sanitized/Admin API Tool/Web Publishing Engine - ID 61/Update Nginx Load Balancer URL Setting - ID 184.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Update Server Default Backup Folder Path
#  HISTORY:
				   - Created:   2020-01-19 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  2020-00-00 

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/nginxloadbalancerurl/config" ]
Variable setzen [ $json ; JSONSetElement ( "" 
				  ; [ "NginxLoadBalancerUrl"; FMS__fmserver::NginxLoadBalancerUrl ; JSONString ]
				 ) ]

Variable setzen [ $curloptions ; " --request PATCH" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --data @$json" &
				" --dump-header $$my.headers" ]
# set api update variable
Variable setzen [ $$API.UPDATE ; "1" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
