tests/snapshots/scripts_sanitized/Admin API Tool/Web Publishing Engine - ID 61/WPE Settings for All Machines - ID 69.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: WPE Settings for All Machines
#  HISTORY:
     - Created:   2019-06-11 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2018-MM-DD by FName LName

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/wpe/config" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Variable setzen [ $this.id ; FMS__fmserver::ID ]
	# get wpe
	Fenster fixieren
	Wenn [ IstLeer ( FMS_WPE__wpe::ID ) ]
		Gehe zu Layout [ Layout: "WPE__wpe" ; Animation: Ohne ]
	Sonst
		Gehe zu Bezugsdatensatz ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "74" ] ⚠️⚠️⚠️
		Alle Datensätze löschen [ Mit Dialog: OFF ]
	Ende (wenn)
	Variable setzen [ $this.loop ; 0 ]
	Schleife (Anfang) [ Flush: Immer ]
		Wenn [ NICHT IstLeer ( JSONGetElement ( $$my.result ; "response[" & $this.loop & "].id" ) ) ]
			Neuer Datensatz/Abfrage
			Feldwert setzen [ WPE__wpe::ID_Server ; $this.id ]
			Feldwert setzen [ WPE__wpe::host ; JSONGetElement ( $$my.result ; "response[" & $this.loop & "].host" ) ]
			Feldwert setzen [ WPE__wpe::ip ; JSONGetElement ( $$my.result ; "response[" & $this.loop & "].ip" ) ]
			Feldwert setzen [ WPE__wpe::connections ; JSONGetElement ( $$my.result ; "response[" & $this.loop & "].connections" ) ]
			Feldwert setzen [ WPE__wpe::enabled ; JSONGetElement ( $$my.result ; "response[" & $this.loop & "].enabled" ) ]
			Feldwert setzen [ WPE__wpe::id_wpe ; JSONGetElement ( $$my.result ; "response[" & $this.loop & "].id" ) ]
		Ende (wenn)
		
		Variable setzen [ $this.loop ; $this.loop + 1 ]
		Verlasse Schleife wenn [ IstLeer ( JSONGetElement ( $$my.result ; "response[" & $this.loop & "].id" ) ) ]
		
	Schleife (Ende)
	
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Gehe zu Objekt [ "panel_wpe" ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
